--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </script>
 
 </head>
-<body class="bg-gray-900 text-white font-sans">
+<body style="background: url('./assets/bg.jpg') center center / cover no-repeat;" class="bg-gray-900 text-white font-sans">
   <header class="bg-gray-800 text-center p-6 text-3xl font-bold">AgriNexus World</header>
   
 <div class="text-right p-4">
