--- a/index.html
+++ b/index.html
@@ -21,34 +21,34 @@
     <button class="bg-teal-500 text-white px-6 py-2 rounded font-semibold mb-12">시작</button>
 
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 text-left">
-      <div class="bg-gray-800 rounded-xl p-6 shadow">
-        <h3 class="text-lg font-semibold mb-1">스마트 팜</h3>
-        <p class="text-sm text-gray-300">스마트 농업 운영 모니터링 및 관리</p>
-      </div>
-      <div class="bg-gray-800 rounded-xl p-6 shadow">
-        <h3 class="text-lg font-semibold mb-1">물류 시스템</h3>
-        <p class="text-sm text-gray-300">각 국가에 필요한 수출 서류 최적화</p>
-      </div>
-      <div class="bg-gray-800 rounded-xl p-6 shadow">
-        <h3 class="text-lg font-semibold mb-1">계약 관리</h3>
-        <p class="text-sm text-gray-300">농업 계약 자동화 및 관리</p>
-      </div>
-      <div class="bg-gray-800 rounded-xl p-6 shadow">
-        <h3 class="text-lg font-semibold mb-1">수익 예측</h3>
-        <p class="text-sm text-gray-300">지역 및 시장을 기반으로 작물 수익을 추정</p>
-      </div>
-      <div class="bg-gray-800 rounded-xl p-6 shadow">
-        <h3 class="text-lg font-semibold mb-1">수출 서류</h3>
-        <p class="text-sm text-gray-300">농작물에 필요한 수출 서류 생성</p>
-      </div>
-      <div class="bg-gray-800 rounded-xl p-6 shadow">
-        <h3 class="text-lg font-semibold mb-1">활성 사용자</h3>
-        <p class="text-sm text-gray-300"><span class="text-teal-400">1,234</span> 온라인</p>
-      </div>
-      <div class="bg-gray-800 rounded-xl p-6 shadow">
-        <h3 class="text-lg font-semibold mb-1">자가 학습 시스템</h3>
-        <p class="text-sm text-gray-300">AI를 개선하고 시간이 지나며 기능을 발전</p>
-      </div>
+      <a href="./src/smartfarm/index.html" class="bg-gray-800 rounded-xl p-6 shadow hover:bg-green-700 transition block">
+        <h3 class="text-lg font-semibold mb-1">🌱 스마트 팜</h3>
+        <p class="text-sm text-gray-300">작물 추천, 조건 선택, 피드백 입력</p>
+      </a>
+      <a href="./src/logistics/index.html" class="bg-gray-800 rounded-xl p-6 shadow hover:bg-blue-700 transition block">
+        <h3 class="text-lg font-semibold mb-1">🚛 물류 시스템</h3>
+        <p class="text-sm text-gray-300">수출 문서 최적화 및 국가별 대응</p>
+      </a>
+      <a href="./src/contract/index.html" class="bg-gray-800 rounded-xl p-6 shadow hover:bg-purple-700 transition block">
+        <h3 class="text-lg font-semibold mb-1">📄 계약서 생성</h3>
+        <p class="text-sm text-gray-300">PDF 다운로드, 이메일 전송, 서명</p>
+      </a>
+      <a href="./src/report/index.html" class="bg-gray-800 rounded-xl p-6 shadow hover:bg-pink-700 transition block">
+        <h3 class="text-lg font-semibold mb-1">📊 수익 예측 보고서</h3>
+        <p class="text-sm text-gray-300">차트 시각화 및 분석 기능</p>
+      </a>
+      <a href="./src/ai/index.html" class="bg-gray-800 rounded-xl p-6 shadow hover:bg-yellow-700 transition block">
+        <h3 class="text-lg font-semibold mb-1">🤖 AI 분석 생성기</h3>
+        <p class="text-sm text-gray-300">GPT 스타일 문장 생성 및 결과 분석</p>
+      </a>
+      <a href="./src/export/index.html" class="bg-gray-800 rounded-xl p-6 shadow hover:bg-teal-700 transition block">
+        <h3 class="text-lg font-semibold mb-1">🌍 국가별 문서 자동화</h3>
+        <p class="text-sm text-gray-300">단위/통화/포맷 자동 적용</p>
+      </a>
+      <a href="./src/admin/index.html" class="bg-gray-800 rounded-xl p-6 shadow hover:bg-red-700 transition block">
+        <h3 class="text-lg font-semibold mb-1">🔐 관리자 전용</h3>
+        <p class="text-sm text-gray-300">통계 대시보드 + 로그인 보호</p>
+      </a>
     </div>
   </main>
 
