--- a/src/ai/index.html
+++ b/src/ai/index.html
@@ -2,33 +2,34 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>AI 작물 분석 시뮬레이터</title>
+  <title>GPT 기반 AI 분석</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <script>
-    function generateAnalysis() {
+    function generateAIResult() {
       const crop = document.getElementById("cropInput").value.trim();
+      const env = document.getElementById("envInput").value.trim();
       const area = document.getElementById("areaInput").value.trim();
-      const resultBox = document.getElementById("gptResult");
+      const result = document.getElementById("aiOutput");
 
-      if (crop && area) {
-        const result = `🤖 AI 분석 결과:\n\n"${crop}"는 현재 기후 조건과 스마트팜 환경에서 적합한 작물로 평가됩니다. 예상 수익률은 면적 ${area}㎡ 기준으로 최대화할 수 있으며, 자동 제어 및 AI 센서 기반 운영이 수익성을 높이는 핵심 요소입니다.\n\n이 작물은 수출 가능성과 내수 안정성이 높아 재배 추천 등급: ★★★★☆`;
-        resultBox.innerText = result;
+      if (crop && env && area) {
+        result.innerText = `🤖 AI 분석 결과:\n\n"${crop}" 작물은 "${env}" 환경 조건에서 ${area}㎡ 면적 기준으로 매우 우수한 재배 효율을 보일 것으로 예측됩니다.\n스마트팜 자동화 시스템과 결합 시 수익률 상승 기대치: +18~25%.\n추천 등급: ★★★★☆`;
       } else {
-        resultBox.innerText = "작물명과 면적을 모두 입력해주세요.";
+        result.innerText = "모든 항목을 입력해주세요.";
       }
     }
   </script>
 </head>
 <body class="bg-gray-900 text-white min-h-screen">
   <header class="bg-green-800 text-center p-6 text-2xl font-bold">GPT 기반 AI 분석</header>
-  <main class="max-w-2xl mx-auto p-8">
-    <div class="grid gap-4">
-      <input id="cropInput" type="text" placeholder="작물 이름 입력" class="p-2 rounded text-gray-800" />
-      <input id="areaInput" type="number" placeholder="재배 면적 (㎡)" class="p-2 rounded text-gray-800" />
-      <button onclick="generateAnalysis()" class="bg-green-600 hover:bg-green-500 text-white px-4 py-2 rounded">분석 생성</button>
+  <main class="max-w-xl mx-auto p-8">
+    <div class="grid gap-4 mb-6">
+      <input id="cropInput" type="text" placeholder="작물 이름" class="p-2 rounded text-gray-800" />
+      <input id="envInput" type="text" placeholder="환경 조건 (예: 고온 다습, 온난 건조 등)" class="p-2 rounded text-gray-800" />
+      <input id="areaInput" type="number" placeholder="면적 (㎡)" class="p-2 rounded text-gray-800" />
+      <button onclick="generateAIResult()" class="bg-green-600 hover:bg-green-500 text-white px-4 py-2 rounded">AI 분석 실행</button>
     </div>
-    <pre id="gptResult" class="mt-6 p-4 bg-gray-800 rounded text-green-300 text-lg font-medium whitespace-pre-wrap"></pre>
+    <pre id="aiOutput" class="p-4 bg-gray-800 rounded text-green-300 text-lg font-medium whitespace-pre-wrap"></pre>
   </main>
 </body>
 </html>
