--- a/src/smartfarm/index.html
+++ b/src/smartfarm/index.html
@@ -65,6 +65,25 @@
       <h3 class="text-lg font-semibold mb-2">📚 저장된 피드백 목록</h3>
       <ul id="feedbackHistory" class="text-sm text-gray-300 list-disc ml-5"></ul>
     </section>
-  </main>
+  
+<section class="mt-10">
+  <h3 class="text-lg font-semibold mb-2">🧠 자가 학습 기반 반응 시스템</h3>
+  <button onclick="simulateLearning()" class="bg-indigo-600 hover:bg-indigo-500 text-white px-4 py-2 rounded">업그레이드 시뮬레이션 실행</button>
+  <p id="learnMsg" class="mt-3 text-indigo-300 text-sm"></p>
+</section>
+
+<script>
+  function simulateLearning() {
+    const history = JSON.parse(localStorage.getItem("agrinexus_feedbacks") || "[]");
+    const msg = document.getElementById("learnMsg");
+    if (history.length >= 3) {
+      msg.innerText = "✅ 자가학습 결과: 피드백 데이터 분석을 기반으로 '상추'에 대한 작물 추천 알고리즘이 강화되었습니다.";
+    } else {
+      msg.innerText = "ℹ️ 피드백이 충분하지 않아 업그레이드 조건을 충족하지 못했습니다.";
+    }
+  }
+</script>
+
+</main>
 </body>
 </html>
