--- a/src/dashboard/index.html
+++ b/src/dashboard/index.html
@@ -2,39 +2,49 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>AgriNexus World 통합 대시보드</title>
+  <title>AgriNexus World - 전체 시스템 대시보드</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body class="bg-gray-900 text-white">
   <main class="max-w-6xl mx-auto p-6">
-    <h1 class="text-3xl font-bold text-center mb-6">🌍 AgriNexus World 통합 시스템 대시보드</h1>
-    <p class="text-sm text-gray-400 text-center mb-8">스마트팜 + 물류 + 계약 + 보고서 + AI 분석 + 관리자 기능을 하나의 중심에서 전자동화로 연결</p>
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-6 text-sm text-left">
-      <a href="/src/smartfarm/features.html" class="bg-gray-800 p-4 rounded hover:bg-green-700 transition">
-        ✅ 스마트팜 기능 명세 + 설계/시공/장비/설계 비교 분석
-      </a>
-      <a href="/src/logistics/report.html" class="bg-gray-800 p-4 rounded hover:bg-blue-700 transition">
-        📦 물류 시스템 전체 구성 + 추천 리포트 생성기
-      </a>
-      <a href="/src/admin/stats.html" class="bg-gray-800 p-4 rounded hover:bg-indigo-700 transition">
-        📈 사용자 통계 + 지역별 분석 + 등급 시스템
-      </a>
-      <a href="/src/admin/settings.html" class="bg-gray-800 p-4 rounded hover:bg-yellow-700 transition">
-        ⚙️ 기능 On/Off 제어 설정 + 관리자 로그인
-      </a>
-      <a href="/src/engine/compare.html" class="bg-gray-800 p-4 rounded hover:bg-pink-700 transition">
-        📊 AgriNexus vs 일반 시스템 비교 분석
-      </a>
-      <a href="/src/smartfarm/gptdesign.html" class="bg-gray-800 p-4 rounded hover:bg-red-700 transition">
-        🤖 GPT 기반 자동 설계 생성기
-      </a>
-      <a href="/signup.html" class="bg-gray-800 p-4 rounded hover:bg-teal-700 transition">
-        👥 회원가입 + 로그인 시스템
-      </a>
-      <a href="/index.html" class="bg-gray-800 p-4 rounded hover:bg-purple-700 transition">
-        🏠 메인 홈페이지로 이동
-      </a>
+    <h1 class="text-3xl font-bold text-center mb-6">🌍 AgriNexus World 전체 기능 대시보드</h1>
+    <p class="text-sm text-gray-400 text-center mb-6">플랫폼에 존재하는 모든 기능을 한눈에 보고 클릭할 수 있습니다.</p>
+
+    <h2 class="text-lg font-semibold mt-8 mb-2">📦 스마트팜</h2>
+    <div class="grid grid-cols-2 md:grid-cols-3 gap-4 text-sm">
+      <a href="/src/smartfarm/features.html" class="bg-gray-800 p-3 rounded hover:bg-green-700">전체 기능 명세</a>
+      <a href="/src/smartfarm/plan.html" class="bg-gray-800 p-3 rounded hover:bg-green-700">환경별 자동 설계</a>
+      <a href="/src/smartfarm/build.html" class="bg-gray-800 p-3 rounded hover:bg-green-700">시공 절차 시뮬레이션</a>
+      <a href="/src/smartfarm/recommend.html" class="bg-gray-800 p-3 rounded hover:bg-green-700">장비 자동 추천</a>
+      <a href="/src/smartfarm/gptdesign.html" class="bg-gray-800 p-3 rounded hover:bg-green-700">GPT 도면 생성</a>
+      <a href="/src/smartfarm/langsim.html" class="bg-gray-800 p-3 rounded hover:bg-green-700">다국어 시뮬레이터</a>
+      <a href="/src/smartfarm/mobile.html" class="bg-gray-800 p-3 rounded hover:bg-green-700">모바일 센서 입력</a>
+    </div>
+
+    <h2 class="text-lg font-semibold mt-8 mb-2">🚚 물류 시스템</h2>
+    <div class="grid grid-cols-2 md:grid-cols-3 gap-4 text-sm">
+      <a href="/src/logistics/route.html" class="bg-gray-800 p-3 rounded hover:bg-blue-700">배송 경로 분석기</a>
+      <a href="/src/logistics/vehicle.html" class="bg-gray-800 p-3 rounded hover:bg-blue-700">운송 수단 추천</a>
+      <a href="/src/logistics/cost.html" class="bg-gray-800 p-3 rounded hover:bg-blue-700">비용 계산기</a>
+      <a href="/src/logistics/customs.html" class="bg-gray-800 p-3 rounded hover:bg-blue-700">국가별 통관정보</a>
+      <a href="/src/logistics/form.html" class="bg-gray-800 p-3 rounded hover:bg-blue-700">화물 정보 입력</a>
+      <a href="/src/logistics/track.html" class="bg-gray-800 p-3 rounded hover:bg-blue-700">배송 추적 시뮬레이터</a>
+      <a href="/src/logistics/compare.html" class="bg-gray-800 p-3 rounded hover:bg-blue-700">비교 분석기</a>
+    </div>
+
+    <h2 class="text-lg font-semibold mt-8 mb-2">🌐 글로벌 기능</h2>
+    <div class="grid grid-cols-2 md:grid-cols-3 gap-4 text-sm">
+      <a href="/src/global/gaia.html" class="bg-gray-800 p-3 rounded hover:bg-purple-700">Gaia 기반 세계 설계 시스템</a>
+      <a href="/src/engine/compare.html" class="bg-gray-800 p-3 rounded hover:bg-purple-700">시스템 비교 분석기</a>
+      <a href="/src/engine/suggest.html" class="bg-gray-800 p-3 rounded hover:bg-purple-700">기능 제안기</a>
+    </div>
+
+    <h2 class="text-lg font-semibold mt-8 mb-2">🧠 AI + CS + 관리자</h2>
+    <div class="grid grid-cols-2 md:grid-cols-3 gap-4 text-sm">
+      <a href="/src/ai/realgpt.html" class="bg-gray-800 p-3 rounded hover:bg-pink-700">GPT 실시간 분석</a>
+      <a href="/src/cs/index.html" class="bg-gray-800 p-3 rounded hover:bg-yellow-600">실시간 고객 지원</a>
+      <a href="/src/admin/dashboard.html" class="bg-gray-800 p-3 rounded hover:bg-indigo-700">관리자 통합 대시보드</a>
     </div>
   </main>
 </body>
