--- a/index.html
+++ b/index.html
@@ -2,55 +2,43 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>AgriNexus World - 전기능 메인 접속 페이지</title>
+  <title>AgriNexus World - 실사용 기능 연결 메인</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="AI 기반 글로벌 스마트팜 + 물류 + 계약 + 분석 + CS 자동화 시스템">
+  <meta name="description" content="AI 스마트팜 + 물류 + 계약 + GPT 분석 실사용 플랫폼">
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body class="bg-gray-900 text-white font-sans">
 <main class="max-w-6xl mx-auto p-6">
-  <h1 class="text-3xl font-bold text-center mb-6">🌐 AgriNexus World - 실시간 전자동화 통합 플랫폼</h1>
-  <p class="text-center text-sm text-gray-400 mb-8">스마트팜, 물류, AI 분석, 글로벌 기능, 고객센터까지 전기능 연결</p>
+  <h1 class="text-3xl font-bold text-center mb-6">🌐 AgriNexus World 전체 기능 메인</h1>
+  <p class="text-center text-sm text-gray-400 mb-8">기능을 클릭하면 실제로 연결되고 작동됩니다.</p>
 
-  <h2 class="text-lg font-semibold mb-2">📦 스마트팜</h2>
+  <h2 class="text-lg font-semibold mb-2">🌱 스마트팜</h2>
   <div class="grid grid-cols-2 md:grid-cols-3 gap-4 text-sm mb-6">
-    <a href="/src/smartfarm/features.html" class="bg-gray-800 p-3 rounded hover:bg-green-700">기능 명세 보기</a>
-    <a href="/src/smartfarm/plan.html" class="bg-gray-800 p-3 rounded hover:bg-green-700">환경 설계</a>
-    <a href="/src/smartfarm/build.html" class="bg-gray-800 p-3 rounded hover:bg-green-700">시공 절차</a>
-    <a href="/src/smartfarm/recommend.html" class="bg-gray-800 p-3 rounded hover:bg-green-700">장비 추천</a>
-    <a href="/src/smartfarm/gptdesign.html" class="bg-gray-800 p-3 rounded hover:bg-green-700">GPT 도면 생성기</a>
-    <a href="/src/smartfarm/mobile.html" class="bg-gray-800 p-3 rounded hover:bg-green-700">모바일 센서 입력</a>
+    <a href="src/smartfarm/features.html" class="bg-gray-800 p-3 rounded hover:bg-green-700">기능 명세</a>
+    <a href="src/smartfarm/plan.html" class="bg-gray-800 p-3 rounded hover:bg-green-700">환경 설계</a>
+    <a href="src/smartfarm/build.html" class="bg-gray-800 p-3 rounded hover:bg-green-700">시공 절차</a>
+    <a href="src/smartfarm/recommend.html" class="bg-gray-800 p-3 rounded hover:bg-green-700">장비 추천</a>
+    <a href="src/smartfarm/gptdesign.html" class="bg-gray-800 p-3 rounded hover:bg-green-700">GPT 도면 생성</a>
+    <a href="src/smartfarm/mobile.html" class="bg-gray-800 p-3 rounded hover:bg-green-700">모바일 센서</a>
   </div>
 
   <h2 class="text-lg font-semibold mb-2">🚚 물류 시스템</h2>
   <div class="grid grid-cols-2 md:grid-cols-3 gap-4 text-sm mb-6">
-    <a href="/src/logistics/route.html" class="bg-gray-800 p-3 rounded hover:bg-blue-700">배송 경로 분석</a>
-    <a href="/src/logistics/vehicle.html" class="bg-gray-800 p-3 rounded hover:bg-blue-700">운송 수단 추천</a>
-    <a href="/src/logistics/cost.html" class="bg-gray-800 p-3 rounded hover:bg-blue-700">비용 계산기</a>
-    <a href="/src/logistics/customs.html" class="bg-gray-800 p-3 rounded hover:bg-blue-700">통관 정보</a>
-    <a href="/src/logistics/track.html" class="bg-gray-800 p-3 rounded hover:bg-blue-700">배송 추적</a>
-    <a href="/src/logistics/report.html" class="bg-gray-800 p-3 rounded hover:bg-blue-700">물류 리포트 생성</a>
+    <a href="src/logistics/route.html" class="bg-gray-800 p-3 rounded hover:bg-blue-700">배송 경로</a>
+    <a href="src/logistics/vehicle.html" class="bg-gray-800 p-3 rounded hover:bg-blue-700">운송 수단</a>
+    <a href="src/logistics/cost.html" class="bg-gray-800 p-3 rounded hover:bg-blue-700">비용 계산기</a>
+    <a href="src/logistics/customs.html" class="bg-gray-800 p-3 rounded hover:bg-blue-700">통관 정보</a>
+    <a href="src/logistics/report.html" class="bg-gray-800 p-3 rounded hover:bg-blue-700">리포트 생성</a>
   </div>
 
-  <h2 class="text-lg font-semibold mb-2">🌍 글로벌 시스템</h2>
+  <h2 class="text-lg font-semibold mb-2">🌍 글로벌 / AI / 관리자</h2>
   <div class="grid grid-cols-2 md:grid-cols-3 gap-4 text-sm mb-6">
-    <a href="/src/global/gaia.html" class="bg-gray-800 p-3 rounded hover:bg-purple-700">Gaia 글로벌 자동 설계</a>
-    <a href="/src/engine/suggest.html" class="bg-gray-800 p-3 rounded hover:bg-purple-700">기능 제안기</a>
-    <a href="/src/engine/compare.html" class="bg-gray-800 p-3 rounded hover:bg-purple-700">기능 비교 분석기</a>
-  </div>
-
-  <h2 class="text-lg font-semibold mb-2">🤖 AI & 분석</h2>
-  <div class="grid grid-cols-2 md:grid-cols-3 gap-4 text-sm mb-6">
-    <a href="/src/ai/realgpt.html" class="bg-gray-800 p-3 rounded hover:bg-pink-700">GPT 실시간 분석</a>
-    <a href="/src/smartfarm/langsim.html" class="bg-gray-800 p-3 rounded hover:bg-pink-700">다국어 시뮬레이션</a>
-  </div>
-
-  <h2 class="text-lg font-semibold mb-2">📋 고객지원 / 관리자</h2>
-  <div class="grid grid-cols-2 md:grid-cols-3 gap-4 text-sm">
-    <a href="/src/cs/index.html" class="bg-gray-800 p-3 rounded hover:bg-yellow-700">CS 고객 지원</a>
-    <a href="/src/admin/dashboard.html" class="bg-gray-800 p-3 rounded hover:bg-indigo-700">관리자 대시보드</a>
-    <a href="/src/admin/stats.html" class="bg-gray-800 p-3 rounded hover:bg-indigo-700">가입자 통계</a>
-    <a href="/src/admin/settings.html" class="bg-gray-800 p-3 rounded hover:bg-indigo-700">기능 제어</a>
+    <a href="src/global/gaia.html" class="bg-gray-800 p-3 rounded hover:bg-purple-700">Gaia 시스템</a>
+    <a href="src/ai/realgpt.html" class="bg-gray-800 p-3 rounded hover:bg-pink-700">GPT 분석기</a>
+    <a href="src/engine/suggest.html" class="bg-gray-800 p-3 rounded hover:bg-yellow-600">기능 제안기</a>
+    <a href="src/engine/compare.html" class="bg-gray-800 p-3 rounded hover:bg-yellow-600">비교 분석기</a>
+    <a href="src/admin/dashboard.html" class="bg-gray-800 p-3 rounded hover:bg-indigo-700">관리자 대시보드</a>
+    <a href="src/cs/index.html" class="bg-gray-800 p-3 rounded hover:bg-indigo-600">CS 고객지원</a>
   </div>
 </main>
 </body>
