--- a/index.html
+++ b/index.html
@@ -2,43 +2,35 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>AgriNexus World - 실사용 기능 연결 메인</title>
+  <title>AgriNexus World - 검증된 작동 시스템</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="AI 스마트팜 + 물류 + 계약 + GPT 분석 실사용 플랫폼">
+  <meta name="description" content="AI 스마트팜 + 물류 + 계약 + 분석 실사용 플랫폼">
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body class="bg-gray-900 text-white font-sans">
-<main class="max-w-6xl mx-auto p-6">
-  <h1 class="text-3xl font-bold text-center mb-6">🌐 AgriNexus World 전체 기능 메인</h1>
-  <p class="text-center text-sm text-gray-400 mb-8">기능을 클릭하면 실제로 연결되고 작동됩니다.</p>
+<body class="bg-gray-900 text-white">
+<main class="max-w-4xl mx-auto p-6">
+  <h1 class="text-3xl font-bold text-center mb-6">🌐 AgriNexus World - 작동하는 핵심 기능</h1>
+  <p class="text-center text-sm text-gray-400 mb-8">아래 기능은 클릭 시 실제 작동하며, 기능 설명과 이름이 명확하게 표시되어 있습니다.</p>
 
-  <h2 class="text-lg font-semibold mb-2">🌱 스마트팜</h2>
-  <div class="grid grid-cols-2 md:grid-cols-3 gap-4 text-sm mb-6">
-    <a href="src/smartfarm/features.html" class="bg-gray-800 p-3 rounded hover:bg-green-700">기능 명세</a>
-    <a href="src/smartfarm/plan.html" class="bg-gray-800 p-3 rounded hover:bg-green-700">환경 설계</a>
-    <a href="src/smartfarm/build.html" class="bg-gray-800 p-3 rounded hover:bg-green-700">시공 절차</a>
-    <a href="src/smartfarm/recommend.html" class="bg-gray-800 p-3 rounded hover:bg-green-700">장비 추천</a>
-    <a href="src/smartfarm/gptdesign.html" class="bg-gray-800 p-3 rounded hover:bg-green-700">GPT 도면 생성</a>
-    <a href="src/smartfarm/mobile.html" class="bg-gray-800 p-3 rounded hover:bg-green-700">모바일 센서</a>
-  </div>
-
-  <h2 class="text-lg font-semibold mb-2">🚚 물류 시스템</h2>
-  <div class="grid grid-cols-2 md:grid-cols-3 gap-4 text-sm mb-6">
-    <a href="src/logistics/route.html" class="bg-gray-800 p-3 rounded hover:bg-blue-700">배송 경로</a>
-    <a href="src/logistics/vehicle.html" class="bg-gray-800 p-3 rounded hover:bg-blue-700">운송 수단</a>
-    <a href="src/logistics/cost.html" class="bg-gray-800 p-3 rounded hover:bg-blue-700">비용 계산기</a>
-    <a href="src/logistics/customs.html" class="bg-gray-800 p-3 rounded hover:bg-blue-700">통관 정보</a>
-    <a href="src/logistics/report.html" class="bg-gray-800 p-3 rounded hover:bg-blue-700">리포트 생성</a>
-  </div>
-
-  <h2 class="text-lg font-semibold mb-2">🌍 글로벌 / AI / 관리자</h2>
-  <div class="grid grid-cols-2 md:grid-cols-3 gap-4 text-sm mb-6">
-    <a href="src/global/gaia.html" class="bg-gray-800 p-3 rounded hover:bg-purple-700">Gaia 시스템</a>
-    <a href="src/ai/realgpt.html" class="bg-gray-800 p-3 rounded hover:bg-pink-700">GPT 분석기</a>
-    <a href="src/engine/suggest.html" class="bg-gray-800 p-3 rounded hover:bg-yellow-600">기능 제안기</a>
-    <a href="src/engine/compare.html" class="bg-gray-800 p-3 rounded hover:bg-yellow-600">비교 분석기</a>
-    <a href="src/admin/dashboard.html" class="bg-gray-800 p-3 rounded hover:bg-indigo-700">관리자 대시보드</a>
-    <a href="src/cs/index.html" class="bg-gray-800 p-3 rounded hover:bg-indigo-600">CS 고객지원</a>
+  <div class="grid grid-cols-1 md:grid-cols-2 gap-4 text-sm">
+    <a href="src/smartfarm/plan.html" class="bg-gray-800 p-4 rounded hover:bg-green-700">
+      🌱 스마트팜 환경 설계<br><span class="text-gray-400 text-xs">실내/실외/창고 등 조건 선택 → 자동 설계</span>
+    </a>
+    <a href="src/smartfarm/gptdesign.html" class="bg-gray-800 p-4 rounded hover:bg-green-700">
+      🧠 GPT 기반 도면 생성기<br><span class="text-gray-400 text-xs">환경 조건 입력 → GPT 실시간 설계 응답</span>
+    </a>
+    <a href="src/logistics/cost.html" class="bg-gray-800 p-4 rounded hover:bg-blue-700">
+      💰 물류비용 계산기<br><span class="text-gray-400 text-xs">무게/거리/운송수단 기반 실시간 요금 출력</span>
+    </a>
+    <a href="src/ai/realgpt.html" class="bg-gray-800 p-4 rounded hover:bg-pink-600">
+      🤖 AI 분석 생성기<br><span class="text-gray-400 text-xs">작물, 면적, 조건 입력 → GPT 분석 문장 생성</span>
+    </a>
+    <a href="src/cs/index.html" class="bg-gray-800 p-4 rounded hover:bg-yellow-600">
+      💬 고객 지원 시스템<br><span class="text-gray-400 text-xs">문의 유형 입력 → GPT 자동 응답 출력</span>
+    </a>
+    <a href="src/global/gaia.html" class="bg-gray-800 p-4 rounded hover:bg-purple-600">
+      🌍 Gaia 글로벌 자동 설계<br><span class="text-gray-400 text-xs">국가/환경 기반 설치 설계 + 유통/정책 추천</span>
+    </a>
   </div>
 </main>
 </body>
