--- a/index.html
+++ b/index.html
@@ -2,35 +2,25 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>AgriNexus World - 검증된 작동 시스템</title>
+  <title>AgriNexus World - 연결된 메인 디자인</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="AI 스마트팜 + 물류 + 계약 + 분석 실사용 플랫폼">
+  <meta name="description" content="AI 기반 스마트팜, 글로벌 물류, 실시간 분석 플랫폼">
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body class="bg-gray-900 text-white">
-<main class="max-w-4xl mx-auto p-6">
-  <h1 class="text-3xl font-bold text-center mb-6">🌐 AgriNexus World - 작동하는 핵심 기능</h1>
-  <p class="text-center text-sm text-gray-400 mb-8">아래 기능은 클릭 시 실제 작동하며, 기능 설명과 이름이 명확하게 표시되어 있습니다.</p>
+<main class="max-w-6xl mx-auto p-6">
+  <header class="text-center mb-10">
+    <h1 class="text-3xl font-bold mb-2">🌍 AgriNexus World</h1>
+    <p class="text-gray-400">AI + 스마트팜 + 물류 + 글로벌 자동화 시스템</p>
+  </header>
 
-  <div class="grid grid-cols-1 md:grid-cols-2 gap-4 text-sm">
-    <a href="src/smartfarm/plan.html" class="bg-gray-800 p-4 rounded hover:bg-green-700">
-      🌱 스마트팜 환경 설계<br><span class="text-gray-400 text-xs">실내/실외/창고 등 조건 선택 → 자동 설계</span>
-    </a>
-    <a href="src/smartfarm/gptdesign.html" class="bg-gray-800 p-4 rounded hover:bg-green-700">
-      🧠 GPT 기반 도면 생성기<br><span class="text-gray-400 text-xs">환경 조건 입력 → GPT 실시간 설계 응답</span>
-    </a>
-    <a href="src/logistics/cost.html" class="bg-gray-800 p-4 rounded hover:bg-blue-700">
-      💰 물류비용 계산기<br><span class="text-gray-400 text-xs">무게/거리/운송수단 기반 실시간 요금 출력</span>
-    </a>
-    <a href="src/ai/realgpt.html" class="bg-gray-800 p-4 rounded hover:bg-pink-600">
-      🤖 AI 분석 생성기<br><span class="text-gray-400 text-xs">작물, 면적, 조건 입력 → GPT 분석 문장 생성</span>
-    </a>
-    <a href="src/cs/index.html" class="bg-gray-800 p-4 rounded hover:bg-yellow-600">
-      💬 고객 지원 시스템<br><span class="text-gray-400 text-xs">문의 유형 입력 → GPT 자동 응답 출력</span>
-    </a>
-    <a href="src/global/gaia.html" class="bg-gray-800 p-4 rounded hover:bg-purple-600">
-      🌍 Gaia 글로벌 자동 설계<br><span class="text-gray-400 text-xs">국가/환경 기반 설치 설계 + 유통/정책 추천</span>
-    </a>
+  <h2 class="text-lg font-semibold mb-2">🧠 스마트팜 주요 기능</h2>
+  <div class="grid grid-cols-2 md:grid-cols-3 gap-4 text-sm">
+    <a href="src/smartfarm/plan.html" class="bg-gray-800 p-3 rounded hover:bg-green-600">환경 자동 설계</a>
+    <a href="src/smartfarm/gptdesign.html" class="bg-gray-800 p-3 rounded hover:bg-green-600">GPT 도면 생성</a>
+    <a href="src/smartfarm/build.html" class="bg-gray-800 p-3 rounded hover:bg-green-600">시공 시뮬레이터</a>
+    <a href="src/smartfarm/recommend.html" class="bg-gray-800 p-3 rounded hover:bg-green-600">장비 추천</a>
+    <a href="src/smartfarm/features.html" class="bg-gray-800 p-3 rounded hover:bg-green-600">전체 기능 명세</a>
   </div>
 </main>
 </body>
