--- a/index.html
+++ b/index.html
@@ -2,37 +2,68 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>AgriNexus World - 통합 실사용 플랫폼</title>
+  <title>AgriNexus World - 실사용 통합 리디자인</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="AI 스마트팜 · 물류 자동화 · 글로벌 설계 · 고객 지원 통합 시스템">
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body class="bg-gray-900 text-white">
-<main class="max-w-5xl mx-auto p-6">
+<body class="bg-gray-950 text-white">
+<main class="max-w-6xl mx-auto p-6">
   <header class="text-center mb-10">
     <h1 class="text-4xl font-bold">🌍 AgriNexus World</h1>
-    <p class="text-gray-400 text-sm mt-2">AI + 스마트팜 + 글로벌 물류 자동화 플랫폼</p>
+    <p class="text-sm text-gray-400 mt-2">AI 기반 농업 자동화 솔루션</p>
   </header>
 
-  <div class="grid grid-cols-2 md:grid-cols-3 gap-4 text-sm">
-    <a href="src/smartfarm/plan.html" class="bg-gray-800 p-4 rounded hover:bg-green-600">
-      환경 설계<br><span class="text-xs text-gray-400">설치 조건에 따라 설계 추천</span>
-    </a>
-    <a href="src/logistics/route.html" class="bg-gray-800 p-4 rounded hover:bg-blue-600">
-      배송 경로 분석<br><span class="text-xs text-gray-400">출발지-도착지 기반 최적 경로</span>
-    </a>
-    <a href="src/ai/realgpt.html" class="bg-gray-800 p-4 rounded hover:bg-pink-600">
-      GPT 분석기<br><span class="text-xs text-gray-400">실시간 작물 조건 분석</span>
-    </a>
-    <a href="src/global/gaia.html" class="bg-gray-800 p-4 rounded hover:bg-purple-600">
-      Gaia 설계 시스템<br><span class="text-xs text-gray-400">전세계 자동화 설계 시스템</span>
-    </a>
-    <a href="src/cs/index.html" class="bg-gray-800 p-4 rounded hover:bg-yellow-600">
-      고객지원 시스템<br><span class="text-xs text-gray-400">문의 유형 선택 → GPT 응답</span>
-    </a>
-    <a href="src/admin/dashboard.html" class="bg-gray-800 p-4 rounded hover:bg-indigo-600">
-      관리자 대시보드<br><span class="text-xs text-gray-400">기능 통계 및 제어</span>
-    </a>
-  </div>
+  <section class="mb-10">
+    <h2 class="text-2xl font-semibold mb-4">🌱 스마트팜 기능</h2>
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 text-sm">
+      <a href="src/smartfarm/plan.html" class="bg-gray-800 p-5 rounded hover:bg-green-600 transition">
+        ✅ 환경 자동 설계<br><span class="text-xs text-gray-400">설치 조건에 따라 자동 설계</span>
+      </a>
+      <a href="src/smartfarm/gptdesign.html" class="bg-gray-800 p-5 rounded hover:bg-green-600 transition">
+        🧠 GPT 설계 생성기<br><span class="text-xs text-gray-400">AI 기반 도면 설계 제안</span>
+      </a>
+      <a href="src/smartfarm/build.html" class="bg-gray-800 p-5 rounded hover:bg-green-600 transition">
+        🏗️ 시공 시뮬레이터<br><span class="text-xs text-gray-400">설치 단계별 흐름 안내</span>
+      </a>
+    </div>
+  </section>
+
+  <section class="mb-10">
+    <h2 class="text-2xl font-semibold mb-4">🚛 물류 시스템</h2>
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 text-sm">
+      <a href="src/logistics/route.html" class="bg-gray-800 p-5 rounded hover:bg-blue-600 transition">
+        🚚 배송 경로 분석<br><span class="text-xs text-gray-400">출발지-도착지 최적 경로</span>
+      </a>
+      <a href="src/logistics/cost.html" class="bg-gray-800 p-5 rounded hover:bg-blue-600 transition">
+        💰 물류비 계산기<br><span class="text-xs text-gray-400">거리/무게 기반 자동 비용 계산</span>
+      </a>
+    </div>
+  </section>
+
+  <section class="mb-10">
+    <h2 class="text-2xl font-semibold mb-4">🧠 AI + 글로벌 설계</h2>
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 text-sm">
+      <a href="src/ai/realgpt.html" class="bg-gray-800 p-5 rounded hover:bg-pink-600 transition">
+        🤖 GPT 분석기<br><span class="text-xs text-gray-400">작물/조건 입력 → AI 분석 문장 생성</span>
+      </a>
+      <a href="src/global/gaia.html" class="bg-gray-800 p-5 rounded hover:bg-purple-600 transition">
+        🌍 Gaia 글로벌 설계기<br><span class="text-xs text-gray-400">국가/환경 기반 자동화 설계</span>
+      </a>
+    </div>
+  </section>
+
+  <section>
+    <h2 class="text-2xl font-semibold mb-4">📋 관리자 / 고객지원</h2>
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 text-sm">
+      <a href="src/admin/dashboard.html" class="bg-gray-800 p-5 rounded hover:bg-indigo-600 transition">
+        📊 관리자 대시보드<br><span class="text-xs text-gray-400">기능 설정 / 통계 확인</span>
+      </a>
+      <a href="src/cs/index.html" class="bg-gray-800 p-5 rounded hover:bg-yellow-600 transition">
+        💬 고객지원 시스템<br><span class="text-xs text-gray-400">GPT 자동 응답 고객 서비스</span>
+      </a>
+    </div>
+  </section>
 </main>
 </body>
 </html>
